// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Component alertdialog role 1`] = `
<body
  class="body--dbx-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="assertive"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    >
      <div
        class="dbx-modal dbx-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="dbx-modal__dialog dbx-modal__dialog--width-m dbx-modal__dialog--open"
          role="alertdialog"
          tabindex="-1"
        >
          <header
            class="dbx-modal__header dbx-modal__header--collapse"
          >
            <button
              class="dbx-button dbx-button--hover-only dbx-button--square dbx-button--m dbx-modal__closebutton"
              title="Close the dialogue"
              type="button"
            >
              <svg
                class="dbx-icon"
                height="24"
                role="img"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Close the dialogue
              </span>
            </button>
          </header>
          <main
            class="dbx-modal__content dbx-modal__content--right-gap"
          >
            Modal should have alert role.
          </main>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component no close button 1`] = `
<body
  class="body--dbx-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    >
      <div
        class="dbx-modal dbx-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="dbx-modal__dialog dbx-modal__dialog--width-m dbx-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="dbx-modal__header dbx-modal__header--collapse"
          />
          <main
            class="dbx-modal__content"
          >
            Modal without a close button.
          </main>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component render PrimaryButton 1`] = `
<body
  class="body--dbx-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    >
      <div
        class="dbx-modal dbx-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="dbx-modal__dialog dbx-modal__dialog--width-m dbx-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="dbx-modal__header dbx-modal__header--collapse"
          >
            <button
              class="dbx-button dbx-button--hover-only dbx-button--square dbx-button--m dbx-modal__closebutton"
              title="Close the dialogue"
              type="button"
            >
              <svg
                class="dbx-icon"
                height="24"
                role="img"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Close the dialogue
              </span>
            </button>
          </header>
          <main
            class="dbx-modal__content dbx-modal__content--right-gap"
          >
            Modal with PrimaryButton.
          </main>
          <div
            class="dbx-modal__actions"
          >
            <div
              class="dbx-modal__action dbx-modal__action--primary"
            >
              <button
                class="dbx-button dbx-button--primary dbx-button--default dbx-button--l"
                type="button"
              >
                Primary Button Here
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component render SecondaryButton 1`] = `
<body
  class="body--dbx-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    >
      <div
        class="dbx-modal dbx-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="dbx-modal__dialog dbx-modal__dialog--width-m dbx-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="dbx-modal__header dbx-modal__header--collapse"
          >
            <button
              class="dbx-button dbx-button--hover-only dbx-button--square dbx-button--m dbx-modal__closebutton"
              title="Close the dialogue"
              type="button"
            >
              <svg
                class="dbx-icon"
                height="24"
                role="img"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Close the dialogue
              </span>
            </button>
          </header>
          <main
            class="dbx-modal__content dbx-modal__content--right-gap"
          >
            Modal with SecondaryButton.
          </main>
          <div
            class="dbx-modal__actions"
          >
            <div
              class="dbx-modal__action dbx-modal__action--secondary"
            >
              <button
                class="dbx-button dbx-button--primary dbx-button--default dbx-button--l"
                type="button"
              >
                Secondary Button Here
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component render optional properties 1`] = `
<body
  class="body--dbx-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    >
      <div
        class="dbx-modal some-overlay-class dbx-modal--open"
      >
        <div
          aria-describedby="modal-desc"
          aria-labelledby="modal-label"
          aria-modal="true"
          class="dbx-modal__dialog dbx-modal__dialog--width-m some-class dbx-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="dbx-modal__header"
          >
            <button
              class="dbx-button dbx-button--hover-only dbx-button--square dbx-button--m dbx-modal__closebutton"
              title="Custom text"
              type="button"
            >
              <svg
                class="dbx-icon"
                height="24"
                role="img"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Custom text
              </span>
            </button>
            <h2
              class="dbx-modal__title"
              id="ariaLabelledBy"
            >
              Modal TITLE
            </h2>
          </header>
          <main
            class="dbx-modal__content"
          >
            This is a basic render including optional properties.
          </main>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component render required properties only 1`] = `
<body
  class="body--dbx-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="dbx-modal-portal"
    >
      <div
        class="dbx-modal dbx-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="dbx-modal__dialog dbx-modal__dialog--width-m dbx-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="dbx-modal__header dbx-modal__header--collapse"
          >
            <button
              class="dbx-button dbx-button--hover-only dbx-button--square dbx-button--m dbx-modal__closebutton"
              title="Close the dialogue"
              type="button"
            >
              <svg
                class="dbx-icon"
                height="24"
                role="img"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Close the dialogue
              </span>
            </button>
          </header>
          <main
            class="dbx-modal__content dbx-modal__content--right-gap"
          >
            This is a basic render of required properties.
          </main>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component size auto 1`] = `
<body
  class="body--dbx-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    >
      <div
        class="dbx-modal dbx-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="dbx-modal__dialog dbx-modal__dialog--width-auto dbx-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="dbx-modal__header dbx-modal__header--collapse"
          >
            <button
              class="dbx-button dbx-button--hover-only dbx-button--square dbx-button--m dbx-modal__closebutton"
              title="Close the dialogue"
              type="button"
            >
              <svg
                class="dbx-icon"
                height="24"
                role="img"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Close the dialogue
              </span>
            </button>
          </header>
          <main
            class="dbx-modal__content dbx-modal__content--right-gap"
          >
            Modal should have size=
            auto
            .
          </main>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div />
  </div>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component size l 1`] = `
<body
  class="body--dbx-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    >
      <div
        class="dbx-modal dbx-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="dbx-modal__dialog dbx-modal__dialog--width-l dbx-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="dbx-modal__header dbx-modal__header--collapse"
          >
            <button
              class="dbx-button dbx-button--hover-only dbx-button--square dbx-button--m dbx-modal__closebutton"
              title="Close the dialogue"
              type="button"
            >
              <svg
                class="dbx-icon"
                height="24"
                role="img"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Close the dialogue
              </span>
            </button>
          </header>
          <main
            class="dbx-modal__content dbx-modal__content--right-gap"
          >
            Modal should have size=
            l
            .
          </main>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div />
  </div>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component size m 1`] = `
<body
  class="body--dbx-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    >
      <div
        class="dbx-modal dbx-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="dbx-modal__dialog dbx-modal__dialog--width-m dbx-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="dbx-modal__header dbx-modal__header--collapse"
          >
            <button
              class="dbx-button dbx-button--hover-only dbx-button--square dbx-button--m dbx-modal__closebutton"
              title="Close the dialogue"
              type="button"
            >
              <svg
                class="dbx-icon"
                height="24"
                role="img"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Close the dialogue
              </span>
            </button>
          </header>
          <main
            class="dbx-modal__content dbx-modal__content--right-gap"
          >
            Modal should have size=
            m
            .
          </main>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div />
  </div>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component size s 1`] = `
<body
  class="body--dbx-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    />
    <div
      class="dbx-modal-portal"
    >
      <div
        class="dbx-modal dbx-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="dbx-modal__dialog dbx-modal__dialog--width-s dbx-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="dbx-modal__header dbx-modal__header--collapse"
          >
            <button
              class="dbx-button dbx-button--hover-only dbx-button--square dbx-button--m dbx-modal__closebutton"
              title="Close the dialogue"
              type="button"
            >
              <svg
                class="dbx-icon"
                height="24"
                role="img"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Close the dialogue
              </span>
            </button>
          </header>
          <main
            class="dbx-modal__content dbx-modal__content--right-gap"
          >
            Modal should have size=
            s
            .
          </main>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div />
  </div>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;
